# desktop-squirrel-pet

./: README.md  globals.py  interaktiv.py  main.py  my_functipon.py  pyproject.toml  requirements.txt  setup.py
source/: read_data.py  screen_geometry.py
